<resources>
    <string name="app_name">ChinaAppAlexKoJava</string>
    <string name="two">Two</string>
    <string name="one">One</string>
    <string name="three">Three</string>
    <string name="wo_men_yow_huh_cha">Wo men yow huh cha</string>
    <string name="we_want_to_drink_tea">We want to drink tea</string>
    <string name="dee_san_she_ann">Dee san she ann</string>
    <string name="fried_potato_green_pepper_and_eggplant">Fried potato, green pepper, and eggplant</string>
    <string name="gan_bian_see_jee_dough">Gan bian see jee dough</string>
    <string name="fried_beans_with_minced_pork">Fried beans with minced pork</string>
    <string name="gong_bao_jee_diung">Gong bao jee diung</string>
    <string name="kung_pao_chicken">Kung Pao Chicken</string>
    <string name="tang_su_lee_jee">Tang su lee jee</string>
    <string name="sweet_and_sour_pork">Sweet and sour pork</string>
    <string name="wo_chi_bow_la">Wo chi bow la</string>
    <string name="i_am_full">I am full</string>
    <string name="hao_cheh">Hao cheh!</string>
    <string name="delicious">Delicious!</string>
    <string name="mai_dan_dua_showw_chen">Mai dan, dua showw chen?</string>
    <string name="the_bill_how_much_money">The bill, how much money?</string>
    <string name="lai_y_ping_bing_pee_jeow">Lai y ping bing pee jeow</string>
    <string name="a_bottle_of_iced_beer_please">A bottle of iced beer please</string>
    <string name="fu_oo_yuan_dian_sai">Fu oo yuan dian sai</string>
    <string name="hi_we_are_ready_to_order">Hi, we are ready to order</string>
    <string name="yo_chai_dan_ma">Yo chai dan ma?</string>
    <string name="do_you_have_a_menu">Do you have a menu?</string>
    <string name="fu_yar">Fu yar!</string>
    <string name="server">Server!</string>
    <string name="i_lost_my_passport">I lost my passport</string>
    <string name="wo_de_who_jow_tiu_la">Wo de who jow tiu la</string>
    <string name="a_bad_headache">A bad headache</string>
    <string name="tow_hun_tongue">Tow hun tongue</string>
    <string name="it_hurts_badly_here">It hurts badly here</string>
    <string name="jar_hun_tongue">Jar hun tongue</string>
    <string name="what_s_up">What\'s up?</string>
    <string name="kuh_suo_jai_nar">Kuh suo jai nar?</string>
    <string name="where_s_the_bathroom">Where\'s the bathroom?</string>
    <string name="ni_huy_sho_ing_when_ma">Ni huy sho ing when ma?</string>
    <string name="can_you_speak_english">Can you speak english?</string>
    <string name="gan_man_na">Gan man na?</string>
    <string name="wo_chew_jar">Wo chew jar</string>
    <string name="to_taxi_driver_i_am_going_to_this_place">(To taxi driver) I am going to this place</string>
    <string name="stop_here_please">Stop here please</string>
    <string name="good_morning_morning">Good Morning! Morning!</string>
    <string name="ting_jar_ba">Ting jar ba</string>
    <string name="zao_an_zao_shang_hao_zao">Zao an! Zao shang hao! Zao!</string>
    <string name="good_night">Good night!</string>
    <string name="wa_an">Wa an!</string>
    <string name="dow_le_shuh_ze_lieu_kow">Dow le shuh ze lieu kow</string>
    <string name="when_you_have_arrived_at_the_crossroads">When you have arrived at the crossroads</string>
    <string name="wang_yo_dren">Wang yo dren</string>
    <string name="turn_right">Turn right</string>
    <string name="turn_left">Turn left</string>
    <string name="wang_zuo_dren">Wang zuo dren</string>
    <string name="subway_station">Subway station</string>
    <string name="dee_tia_jen">Dee tia jen</string>
    <string name="dee_tia_jan">Dee tia jan</string>
    <string name="wong_yo_dren">Wong yo dren</string>
    <string name="wong_zuo_dren">Wong zuo dren</string>
    <string name="hao_che">Hao che!</string>
    <string name="kuh_suo_jai_nar_or_suh_saw_jai_nali">Kuh suo jai nar? or Suh-saw Jai Nali?</string>
    <string name="mai_don_dwuh_shao_chen">Mai-don, dwuh shao chen?</string>
</resources>
