<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        style="@android:style/Widget.Material.Light.ScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarStyle="insideOverlay"
        tools:context="ko.alex.phoneticchinese.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp">

            <Button
                android:id="@+id/iamgoingtothisplace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="buttonTapped"
                android:text="@string/to_taxi_driver_i_am_going_to_this_place" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wo_chew_jar" />

            <Button
                android:id="@+id/stophereplease"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="buttonTapped"
                android:text="@string/stop_here_please" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ting_jar_ba" />

            <Button
                android:id="@+id/whenyouhavearrivedatthecrossroads"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="buttonTapped"
                android:text="@string/when_you_have_arrived_at_the_crossroads" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dow_le_shuh_ze_lieu_kow" />

            <Button
                android:id="@+id/turnright"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="buttonTapped"
                android:text="@string/turn_right" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wong_yo_dren" />

            <Button
                android:id="@+id/turnleft"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="buttonTapped"
                android:text="@string/turn_left" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wong_zuo_dren" />

            <Button
                android:id="@+id/subwaystation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="buttonTapped"
                android:text="@string/subway_station" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dee_tia_jan" />

            <Button
                android:id="@+id/ilostmypassport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="buttonTapped"
                android:text="@string/i_lost_my_passport" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wo_de_who_jow_tiu_la" />

            <Button
                android:id="@+id/abadheadache"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="buttonTapped"
                android:text="@string/a_bad_headache" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tow_hun_tongue" />

            <Button
                android:id="@+id/ithurtsbadlyhere"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="buttonTapped"
                android:text="@string/it_hurts_badly_here" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jar_hun_tongue" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>