<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        style="@android:style/Widget.Material.Light.ScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarStyle="insideOverlay"
        tools:context="ko.alex.phoneticchinese.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp">

            <Button
                android:id="@+id/canyouspeakenglish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="buttonTapped"
                android:text="@string/can_you_speak_english" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ni_huy_sho_ing_when_ma" />

            <Button
                android:id="@+id/wheresthebathroom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="buttonTapped"
                android:text="@string/where_s_the_bathroom" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kuh_suo_jai_nar_or_suh_saw_jai_nali" />

            <Button
                android:id="@+id/whatsup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="buttonTapped"
                android:text="@string/what_s_up" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gan_man_na" />

            <Button
                android:id="@+id/goodmorning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="buttonTapped"
                android:text="@string/good_morning_morning" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zao_an_zao_shang_hao_zao" />

            <Button
                android:id="@+id/goodnight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="buttonTapped"
                android:text="@string/good_night" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wa_an" />


        </LinearLayout>

    </ScrollView>

</RelativeLayout>